# radiomics-toolkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  verify.py
radiomics_toolkit/: __init__.py  __main__.py  cli.py  extractor.py  segmentation.py  utils.py  web.py
radiomics_toolkit/features/: __init__.py  base.py  first_order.py  glcm.py  glrlm.py  glszm.py  ngtdm.py  shape.py
radiomics_toolkit/io/: __init__.py  loaders.py  writers.py
radiomics_toolkit/preprocessing/: __init__.py  discretizer.py
radiomics_toolkit/static/: index.html
tests/: test_first_order.py  test_shape.py
